    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageViewLogo"
                android:contentDescription="@string/AboutLogoDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.92"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="36sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollViewAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewDevelopedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutDevelopedBy"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewLicenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicense"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewSmack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicenseSmack"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewBouncyCastle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicenseBouncyCastle"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewJabberIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicenseJabberIcon"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewJzlib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicenseJzlib"
                    android:textSize="16sp" />
                
                
                <TextView
                    android:id="@+id/textViewOTR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicenseOTR"
                    android:textSize="16sp" />
                
                 <TextView
                    android:id="@+id/textViewSQLCipher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicenseSQLCipher"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewLicenseAnimus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutLicenseAnimus"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
