<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View 
        android:id="@+id/view9"
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/tvNameUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNameContact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etNameUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>

    <View 
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="30dp" />
  
    
    <LinearLayout>
    <TextView
        android:id="@+id/tvJIDUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvJIDContact"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tvJIDUpdate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    
   	<View 
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />
    
    <TextView
        android:id="@+id/tvNoteUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNoteContact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etNoteUpdate"
        android:layout_width="wrap_content"
        android:layout_height="166dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <View 
        android:id="@+id/view8"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />
    
    <LinearLayout>

        <Button
            android:id="@+id/btSaveUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/btSaveContact" />

        <Button
            android:id="@+id/btCancelUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/btCancelContact" />
    </LinearLayout>
    

</TableLayout>